# confmerge

./: README.md  pyproject.toml
confmerge/: __init__.py  coerce.py  interpolate.py  loader.py  merger.py  pipeline.py  policies.py  profiles.py  schema.py  serializer.py  sources.py  validators.py  watchers.py
confmerge.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_coerce.py  test_interpolate.py  test_merger.py  test_pipeline.py  test_policies.py  test_profiles.py  test_serializer.py  test_sources.py  test_validators.py  test_watchers.py
